--- a/front.html
+++ b/front.html
@@ -1,38 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>User Login and Deletion Form</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Qeydiyyat Formu</title>
 </head>
 <body>
-    <h2>User Login and Deletion Form</h2>
-    
-    <!-- Login Form -->
-    <form id="loginForm">
-        <label for="id">ID:</label>
-        <input type="text" id="id" name="id" required><br><br>
+    <h1>Qeydiyyat Formu</h1>
+    <form class="form">
 
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required><br><br>
+        <label for="cid">İD:</label>
+        <input type="number" class="cid" required placeholder="ID-nizi qeyd edin">
+        <br> <br>
+        <label for="name">Ad:</label>
+        <input type="text" class="name" required placeholder="Adınızı qeyd edin">
+        <br> <br>
 
-        <label for="surname">Surname:</label>
-        <input type="text" id="surname" name="surname" required><br><br>
+        <label for="surname">Soyad:</label>
+        <input type="text" class="surname" required placeholder="Soyadınızı qeyd edin">
+        <br> <br>
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required><br><br>
+        <label for="password">Şifrə:</label>
+        <input type="password" class="password" required placeholder="Şifrənizi qeyd edin">
+        <br> <br>
 
-        <input type="submit" value="Login">
+        <!-- <label for="address">Ünvan:</label>
+        <input type="text" class="address" required placeholder="Ünvanınızı qeyd edin">
+        <br> <br> -->
+
+        <button type="submit">Təsdiq et</button>
+        <button type="button" class="clear">Təmizlə</button>
     </form>
 
-    <!-- Delete User Form -->
-    <h3>Delete User</h3>
-    <form id="deleteForm">
-        <label for="deleteId">ID:</label>
-        <input type="text" id="deleteId" name="deleteId" required><br><br>
+    <br><br>
 
-        <input type="submit" value="Delete User">
+    <h1>Qeydiyyat Silmə</h1>
+
+    <form class="delform">
+        <label class="">İD:</label>
+        <input type="number"  class="did" placeholder="ID-nizi qeyd edin">
+        <button type="submit" class="fclear">Silmək</button>
     </form>
-    <script src="front.js"></script>
 
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="form.js"></script>
 </body>
-
 </html>
