--- a/front.html
+++ b/front.html
@@ -39,7 +39,7 @@
     <form class="delform">
         <label class="">İD:</label>
         <input type="number"  class="did" placeholder="ID-nizi qeyd edin">
-        <button type="submit" class="fclear">Silmək</button>
+        <button type="submit" class="clear">Silmək</button>
     </form>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
